; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_flagsobject.c_arrayflags_fnc_get.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_flagsobject.c_arrayflags_fnc_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@NPY_ARRAY_F_CONTIGUOUS = common dso_local global i32 0, align 4
@NPY_ARRAY_C_CONTIGUOUS = common dso_local global i32 0, align 4
@Py_True = common dso_local global i32* null, align 8
@Py_False = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @arrayflags_fnc_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @arrayflags_fnc_get(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @NPY_ARRAY_F_CONTIGUOUS, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @NPY_ARRAY_F_CONTIGUOUS, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %21

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @NPY_ARRAY_C_CONTIGUOUS, align 4
  %16 = and i32 %14, %15
  %17 = load i32, i32* @NPY_ARRAY_C_CONTIGUOUS, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %21, label %19

19:                                               ; preds = %11
  %20 = load i32*, i32** @Py_True, align 8
  store i32* %20, i32** %3, align 8
  br label %23

21:                                               ; preds = %11, %1
  %22 = load i32*, i32** @Py_False, align 8
  store i32* %22, i32** %3, align 8
  br label %23

23:                                               ; preds = %21, %19
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @Py_INCREF(i32* %24)
  %26 = load i32*, i32** %3, align 8
  ret i32* %26
}

declare dso_local i32 @Py_INCREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
